# cpp-geeks-cafe

./: CMakeLists.txt  README.md  client.cpp  server.cpp
data/: catalog.txt  test_catalog.txt
images/: cpp-geeks-cafe.xml
include/: cli.h  client.h  menu.h  order.h  orders.h  server.h  test.h
src/: cli.cpp  cli.h  client.cpp  main.cpp  menu.cpp  order.cpp  orders.cpp  server.cpp  test.cpp
